Fix scrollbar issues

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -38,3 +38,4 @@ td
 
 body
   overflow-x: hidden;
+  height: auto;
